# starnet

./: CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  address.h  common.h  main.cpp  net_address.h  net_stream.h  platform.h  reflection.h  socket.h  starnet.h  starnet.sln  starnet.vcxproj  starnet.vcxproj.filters
Debug/: vc141.idb
Debug/starnet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  starnet.lastbuildstate
Samples/BaseTCPChat/: CMakeLists.txt  CTestTestfile.cmake  main.cpp
Samples/BaseTest/: CMakeLists.txt  CTestTestfile.cmake  main.cpp
Samples/BaseUDPChat/: CTestTestfile.cmake  main.cpp
Samples/EchoServer/: CTestTestfile.cmake  main.cpp
Samples/HttpServer/: CTestTestfile.cmake  main.cpp
Samples/JsonTest/: CTestTestfile.cmake  main.cpp
Samples/MemoryStreams/: CTestTestfile.cmake  main.cpp
Samples/TestUri/: CMakeLists.txt
Tests/Test_Uri/: CTestTestfile.cmake  main.cpp
old/: address.cpp  socket.cpp  socket.last.h
src/: address.cpp  address_berkeley.cpp  address_bsd.cpp  socket.cpp  socket_berkeley.cpp  socket_bsd.cpp
src/starnet/: address.cpp  address.h  bit_stream.h  error.h  memory_stream.h  serialization.h  socket.cpp  socket.h  starnet.h  string.cpp  string.h  uri.cpp  uri.h
src/starnet/http/: channel.cpp  channel.h  client.h  header.cpp  header.h  headers.cpp  (+15 more)
starnet/: address.h  address_bsd.h  bit_stream.h  byte_stream.h  common.h  endianness.h  error.h  little_endian.h  memory_buffer.h  memory_stream.h  socket.h  socket.last.h  socket_bsd.h  starnet.h
(+14 files in other folders)
